--- a/Styles.css
+++ b/Styles.css
@@ -1,3 +1,208 @@
-body{
-    margin: 0;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+html {
+  font-size: 62.5%;
+}
+body {
+  font-family: "Rubik", sans-serif;
+  line-height: 1;
+  font-weight: 400;
+  color: #555;
+}
+
+/* ***************************************** */
+/* General REUSABLE components */
+/* ***************************************** */
+.container {
+  /* pour le contener yji lwset */
+  max-width: 120rem;
+  padding: 0 3.2rem;
+  margin: 0 auto;
+}
+.grid {
+  display: grid;
+  gap: 9.6rem;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--3cols {
+  grid-template-columns: repeat(3, 1fr);
+}
+.section div div {
+  padding: 100px;
+  font-size: 50px;
+  background-color: #333;
+}
+.heading-primary {
+  font-size: 3.2rem;
+  font-weight: 700;
+  line-height: 1.05;
+  color: #333;
+  letter-spacing: -0.5px;
+  margin-bottom: 3.2rem;
+}
+.margin-right-sm {
+  margin-right: 1.6rem !important;
+}
+
+/* ***************************************** */
+/* HEADER */
+/* ***************************************** */
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fdf2e9;
+  /* because we want header to be sticky later */
+  height: 9.6rem;
+  padding: 0 4.8rem;
+}
+.logo {
+  height: 210px;
+}
+
+.main-nav-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 3.2rem;
+}
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.8rem;
+  transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #cf711f;
+  /* color: red; */
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: #e67e22;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  background-color: #cf711f;
+}
+/* Hero SECTION */
+/* ***************************************** */
+
+.section-hero {
+  background-color: #fae5d3;
+  padding: 4.8rem 9.6rem 0;
+}
+/* Special */
+.hero {
+  max-width: 130rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 9.6rem;
+  align-items: center;
+}
+
+.hero-description {
+  font-size: 2em;
+  line-height: 1.6;
+  margin-bottom: 4.8rem;
+  /* align-items: center; */
+}
+.btn:link,
+.btn:visited {
+  display: inline-block;
+  background-color: #e67e22;
+  color: #fff;
+  text-decoration: none;
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 1.6rem 2.2rem;
+  border-radius: 100px;
+
+  transition: background-color 1s; /*pour annimation */
+}
+.btn:hover,
+.btn:active {
+  background-color: #a15818;
+  background-color: red;
+}
+.hero-img {
+  width: 80%;
+  /* height: 100%; */
+}
+
+.delivered-clients {
+  display: flex;
+  margin-top: 8rem;
+  align-items: center;
+  gap: 1.6rem;
+  margin: top 8rem;
+}
+
+.delivered-imgs {
+  display: flex;
+}
+.delivered-imgs img {
+  height: 4.8rem;
+  width: 4.8rem;
+  border-radius: 50%;
+  margin-right: -1.6rem;
+  border: 3px solid #fdf2e9;
+}
+.delivered-imgs img:last-child {
+  margin: 0;
+}
+.delivered-text {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+.delivered-text strong {
+  color: #cf711f;
+  font-weight: 700;
+}
+
+/* ***************************************** */
+/* How it work section  */
+/* ***************************************** */
+.section {
+  padding: 9.6rem 0;
+  background-color: orangered;
+}
+
+.section-produits {
+  padding: 9.6rem 0;
+}
+
+.produit-title {
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 600;
+  margin: 3.2rem;
+}
+.produit-attributes {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.produit-attribute {
+  font-size: 1.8rem;
+}
+.produit-img {
+  width: 90%;
 }
